Bug 291033 - Add a headless command to run the aggregator.